@@ -1,5 +1,6 @@
  * Téléchargement des fichiers joints
  * Changement du texte de format de fichiers
+ * Empêche la capture pour tous les écrans
  * Correction du crash pendant le vidage du presse-papiers
  * Correction des compressions des fichiers joints
  * Correction des dates
